+ AVC: Framerate, Interlacement, writing library (only for eavc, x264 and MainConcept encoders)
+ TwinVQ : channels, bitrate and sampling rate
+ Musepack SV8 support
+ Musepack and Musepack SV8: tags support
+ AIFF and AIFC format support
+ MIDI format detection
+ FLV: FrameRate even if the tag is not in the header
+ AU/SND audio formats support
x APE Tags v1 are detected again
x MPEG-PS: some malformed files were not well parsed, fixed
x AVC: Cropping was not well handled (example: height was 1088 instead of 1080)

Version 0.7.5.7, 2008-01-09
---------------
+ SWF: Tags version 9 support
+ MPEG-TS: DegiCipher 2 (DCII) support
+ DVR-MS format support (with MPEG Audio or AC3)
+ WMV: language tag
+ MPEG-2 Video: Nominal bitrate
x AVI: some speed improvments

Version 0.7.5.6, 2007-12-10
---------------
+ AVI, Interlacement for M-JPEG codec
+ AVI, Interleaved tag
+ Better showing of well know values ("44.1 KHz", "22.05 KHz"...)
x AVI, was parsing the whole file in case of non-interleaved files
x MP3, was freezing on specific files
x #1838202: Flac, Resolution was 1 less the the real value (15 bits instead of 16...)

Version 0.7.5.5, 2007-11-09
---------------
+ #1799859: Flac, tags are case insensitive
+ Matroska format parsing improvements
+ .mp4 speed improvement
x BDAV (Bluray) parser compilation was forgotten in the previous version
x AVI, Bitrate and stream size were false
x #1825218: IFO parser was brocken
x #1825521: .mp4 chapters times were wrong
x #1801549: DLL was crashing during Delphi/C# debugging sessions

Version 0.7.5.4, 2007-11-02
---------------
+ Aspect Ratio is renamed Display Aspect Ratio
+ Pixel Aspect Ratio added (in advanced mode)
+ More attributes for AC3+
+ More attributes for VC-1
+ Profile and level for MPEG-4 Visual based formats (DivX...), AVC and VC1
+ Speed improvement for MPEG-TS, MPEG-PS, DVD-Video (.vob), HD-DVD, BluRay
+ MPEG-4 AAC, Channels position
+ AAC (ADIF), More info
+ AAC (ADTS), More info